# Servidor_Backup

./: .env.example  .gitignore  README.md  dev.sh  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: build-windows.yml
backend/: Dockerfile  package.json
backend/src/: server.js
backend/src/config/: db.js
backend/src/middleware/: authenticate.js
backend/src/routes/: auth.js  files.js  folders.js  logs.js  system.js  users.js
backend/src/services/: disk.js
database/: init.sql  migration_v2.sql
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/components/: ChangePasswordModal.jsx  EChart.jsx  FileTypeIcon.jsx  Header.jsx  Layout.jsx  PreviewModal.jsx  RLSLogo.jsx  Sidebar.jsx  StorageBar.jsx  UploadModal.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Admin.jsx  Dashboard.jsx  Files.jsx  Login.jsx  Logs.jsx  ServerConfig.jsx  Shared.jsx
frontend/src/services/: api.js
frontend/src/utils/: platform.js
